--- a/index.html
+++ b/index.html
@@ -173,14 +173,14 @@
       5 лит П, Санкт-Петербург<br>
       <a class="contacts-phone" href="tel:+78005558628"></a>+7 800 555-86-28
     </p>
-    <a href="login.html" class="login-link"><button class="button-red " type="button">Напишите нам</button></a>
+    <a href="login.html" class="login-link"><span class="button-red " type="button">Напишите нам</span></a>
   </section>
   <div id="modal-login" class="modal-hidden">
     <form action="get" method="post" class="form-contact">
       <div class="FormFirstRow">
         <h1>Напишите нам</h1>
         <div class="close">
-          <a href="#" id="modal-close"> <img src="img/close-cross.png"></a>
+          <a href="#" id="modal-close"> <img src="img/close-cross.png" width="21" height="21" alt="Закрыть"></a>
         </div>
       </div>
       <ul>
