--- a/catalog.html
+++ b/catalog.html
@@ -283,7 +283,7 @@
         5 лит П, Санкт-Петербург<br>
         <a class="contacts-phone" href="tel:+78005558628"></a>+7 800 555-86-28
       </p>
-      <a href="login.html" class="login-link"><span class="button-red" type="button">Напишите нам</span></a>
+      <a href="login.html" class="login-link"><span class="button-red">Напишите нам</span></a>
     </section>
 
     <div id="modal-login" class="modal-hidden">
@@ -291,7 +291,7 @@
         <div class="FormFirstRow">
           <h1>Напишите нам</h1>
           <div class="close">
-            <a href="#" id="modal-close"> <img src="img/close-cross.png" alt="Закрыть"></a>
+            <a href="#" id="modal-close"> <img src="img/close-cross.png" width="21" height="21" alt="Закрыть"></a>
           </div>
         </div>
         <ul class="secondRow">
